2007-09-13  Stefan Sobernig  <stefan.sobernig@wu-wien.ac.at>

	* tcl/xorb-context-procs.tcl: Added support for adding/removing
          context data from invocation contexts (setData/getData).

	* tcl/xorb-stub-procs.tcl: Added support for adding/removing
          context data from invocation contexts (setData/getData).

2007-09-12  Stefan Sobernig  <stefan.sobernig@wu-wien.ac.at>

	* tcl/xorb-package-procs.tcl: Fixed a missing exception type
          (PackageException).

2007-09-10  Stefan Sobernig  <stefan.sobernig@wu-wien.ac.at>

	* Updated documentation slightly on new configuration parameters.

2007-09-09  Stefan Sobernig  <stefan.sobernig@wu-wien.ac.at>

	* tcl/20-xorb-procs.tcl: Shifted the package parameter
          interceptor_config to the xorb level (would not make sense
          at the xosoap level).

	* tcl/xorb-package-procs.tcl: Fixed the parameter resolution
          mechanism between protocol packages and the singleton xorb
          package.

2007-09-07  Stefan Sobernig  <stefan.sobernig@wu-wien.ac.at>

	* www/doc/manual/examples/xosoap/example-07-soap-provider-init.tcl
          (echoFloat): Small fix in demo service -> argument in
          contract is meant to be inputFloat, not inputDate! Updated
          documentation. Thanks to Michael Totschnig for the hint.
	  Added missing png to the svn.

2007-09-06  Stefan Sobernig  <stefan.sobernig@wu-wien.ac.at>

	* Tagged 0.4 preview release 

	* tcl/xorb-callback-procs.tcl: Added uninstall logic for 
	anythings of protocol plug-ins! 
	As for upgrades from 0.3 to 0.4, there is currently one
	limitation: contracts and 
	implementations that were defined by non-explicitly named
	::xotcl::Objects (by using new) cannot be identified through
	the allinstances used for upgrades (from within the scope of the
	upgrading connection thread as they were never initiated in
	this very very thread!). This must then be handled manually,
	this won't be a problem in 0.4+ thanks to the object types. 